--- a/09.10.24/index.html
+++ b/09.10.24/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Example</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <div id="data-container"></div>
-
+    <h1>רשימת משתמשים</h1>
+    <ul id="user-list"></ul>
+    <script src="main.js">
+        
+    </script>
 </body>
-<script src="main.js"></script>
-</html> 
-
+</html>
