--- a/IMDB/index.html
+++ b/IMDB/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div id="container">
+        <video autoplay muted loop id="background-video">
+            <source src="7984191-uhd_2160_4096_25fps.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div id="top">
             <div id="hamburger"><a href="#" id="hamburger-btn" style="text-decoration: none; font-size: 30px;"><i class="fa-solid fa-bars"></i></a></div>
             <div id="left-nav">
